chore: update deps and api
