# src/api/models/AddCommentRequest.ts
@@ -1,0 +1,80 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * tgs_v2
+ * Timeguessr Social API V2
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from "../runtime";
+/**
+ *
+ * @export
+ * @interface AddCommentRequest
+ */
+export interface AddCommentRequest {
+  /**
+   *
+   * @type {string}
+   * @memberof AddCommentRequest
+   */
+  uuid: string;
+  /**
+   *
+   * @type {string}
+   * @memberof AddCommentRequest
+   */
+  text: string;
+}
+
+/**
+ * Check if a given object implements the AddCommentRequest interface.
+ */
+export function instanceOfAddCommentRequest(
+  value: object,
+): value is AddCommentRequest {
+  if (!("uuid" in value) || value["uuid"] === undefined) return false;
+  if (!("text" in value) || value["text"] === undefined) return false;
+  return true;
+}
+
+export function AddCommentRequestFromJSON(json: any): AddCommentRequest {
+  return AddCommentRequestFromJSONTyped(json, false);
+}
+
+export function AddCommentRequestFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean,
+): AddCommentRequest {
+  if (json == null) {
+    return json;
+  }
+  return {
+    uuid: json["uuid"],
+    text: json["text"],
+  };
+}
+
+export function AddCommentRequestToJSON(json: any): AddCommentRequest {
+  return AddCommentRequestToJSONTyped(json, false);
+}
+
+export function AddCommentRequestToJSONTyped(
+  value?: AddCommentRequest | null,
+  ignoreDiscriminator: boolean = false,
+): any {
+  if (value == null) {
+    return value;
+  }
+
+  return {
+    uuid: value["uuid"],
+    text: value["text"],
+  };
+}
