# src/api/models/Comment.ts
@@ -1,0 +1,106 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * tgs_v2
+ * Timeguessr Social API V2
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from "../runtime";
+/**
+ *
+ * @export
+ * @interface Comment
+ */
+export interface Comment {
+  /**
+   *
+   * @type {string}
+   * @memberof Comment
+   */
+  commentId: string;
+  /**
+   *
+   * @type {string}
+   * @memberof Comment
+   */
+  playerUuid: string;
+  /**
+   *
+   * @type {string}
+   * @memberof Comment
+   */
+  initials: string;
+  /**
+   *
+   * @type {string}
+   * @memberof Comment
+   */
+  text: string;
+  /**
+   *
+   * @type {string}
+   * @memberof Comment
+   */
+  createdAt: string;
+}
+
+/**
+ * Check if a given object implements the Comment interface.
+ */
+export function instanceOfComment(value: object): value is Comment {
+  if (!("commentId" in value) || value["commentId"] === undefined) return false;
+  if (!("playerUuid" in value) || value["playerUuid"] === undefined)
+    return false;
+  if (!("initials" in value) || value["initials"] === undefined) return false;
+  if (!("text" in value) || value["text"] === undefined) return false;
+  if (!("createdAt" in value) || value["createdAt"] === undefined) return false;
+  return true;
+}
+
+export function CommentFromJSON(json: any): Comment {
+  return CommentFromJSONTyped(json, false);
+}
+
+export function CommentFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean,
+): Comment {
+  if (json == null) {
+    return json;
+  }
+  return {
+    commentId: json["commentId"],
+    playerUuid: json["playerUuid"],
+    initials: json["initials"],
+    text: json["text"],
+    createdAt: json["createdAt"],
+  };
+}
+
+export function CommentToJSON(json: any): Comment {
+  return CommentToJSONTyped(json, false);
+}
+
+export function CommentToJSONTyped(
+  value?: Comment | null,
+  ignoreDiscriminator: boolean = false,
+): any {
+  if (value == null) {
+    return value;
+  }
+
+  return {
+    commentId: value["commentId"],
+    playerUuid: value["playerUuid"],
+    initials: value["initials"],
+    text: value["text"],
+    createdAt: value["createdAt"],
+  };
+}
