# src/api/models/DeleteCommentRequest.ts
@@ -1,0 +1,71 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * tgs_v2
+ * Timeguessr Social API V2
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from "../runtime";
+/**
+ *
+ * @export
+ * @interface DeleteCommentRequest
+ */
+export interface DeleteCommentRequest {
+  /**
+   *
+   * @type {string}
+   * @memberof DeleteCommentRequest
+   */
+  uuid: string;
+}
+
+/**
+ * Check if a given object implements the DeleteCommentRequest interface.
+ */
+export function instanceOfDeleteCommentRequest(
+  value: object,
+): value is DeleteCommentRequest {
+  if (!("uuid" in value) || value["uuid"] === undefined) return false;
+  return true;
+}
+
+export function DeleteCommentRequestFromJSON(json: any): DeleteCommentRequest {
+  return DeleteCommentRequestFromJSONTyped(json, false);
+}
+
+export function DeleteCommentRequestFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean,
+): DeleteCommentRequest {
+  if (json == null) {
+    return json;
+  }
+  return {
+    uuid: json["uuid"],
+  };
+}
+
+export function DeleteCommentRequestToJSON(json: any): DeleteCommentRequest {
+  return DeleteCommentRequestToJSONTyped(json, false);
+}
+
+export function DeleteCommentRequestToJSONTyped(
+  value?: DeleteCommentRequest | null,
+  ignoreDiscriminator: boolean = false,
+): any {
+  if (value == null) {
+    return value;
+  }
+
+  return {
+    uuid: value["uuid"],
+  };
+}
