# src/api/models/GetCommentsResponse.ts
@@ -1,0 +1,79 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * tgs_v2
+ * Timeguessr Social API V2
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from "../runtime";
+import type { Comment } from "./Comment";
+import {
+  CommentFromJSON,
+  CommentFromJSONTyped,
+  CommentToJSON,
+  CommentToJSONTyped,
+} from "./Comment";
+
+/**
+ *
+ * @export
+ * @interface GetCommentsResponse
+ */
+export interface GetCommentsResponse {
+  /**
+   *
+   * @type {Array<Comment>}
+   * @memberof GetCommentsResponse
+   */
+  comments: Array<Comment>;
+}
+
+/**
+ * Check if a given object implements the GetCommentsResponse interface.
+ */
+export function instanceOfGetCommentsResponse(
+  value: object,
+): value is GetCommentsResponse {
+  if (!("comments" in value) || value["comments"] === undefined) return false;
+  return true;
+}
+
+export function GetCommentsResponseFromJSON(json: any): GetCommentsResponse {
+  return GetCommentsResponseFromJSONTyped(json, false);
+}
+
+export function GetCommentsResponseFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean,
+): GetCommentsResponse {
+  if (json == null) {
+    return json;
+  }
+  return {
+    comments: (json["comments"] as Array<any>).map(CommentFromJSON),
+  };
+}
+
+export function GetCommentsResponseToJSON(json: any): GetCommentsResponse {
+  return GetCommentsResponseToJSONTyped(json, false);
+}
+
+export function GetCommentsResponseToJSONTyped(
+  value?: GetCommentsResponse | null,
+  ignoreDiscriminator: boolean = false,
+): any {
+  if (value == null) {
+    return value;
+  }
+
+  return {
+    comments: (value["comments"] as Array<any>).map(CommentToJSON),
+  };
+}
