# src/api/models/PersonalTopScore.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * tgs_v2
+ * Timeguessr Social API V2
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from "../runtime";
+/**
+ *
+ * @export
+ * @interface PersonalTopScore
+ */
+export interface PersonalTopScore {
+  /**
+   *
+   * @type {string}
+   * @memberof PersonalTopScore
+   */
+  dailyDate: string;
+  /**
+   *
+   * @type {number}
+   * @memberof PersonalTopScore
+   */
+  score: number;
+  /**
+   *
+   * @type {string}
+   * @memberof PersonalTopScore
+   */
+  initials: string;
+}
+
+/**
+ * Check if a given object implements the PersonalTopScore interface.
+ */
+export function instanceOfPersonalTopScore(
+  value: object,
+): value is PersonalTopScore {
+  if (!("dailyDate" in value) || value["dailyDate"] === undefined) return false;
+  if (!("score" in value) || value["score"] === undefined) return false;
+  if (!("initials" in value) || value["initials"] === undefined) return false;
+  return true;
+}
+
+export function PersonalTopScoreFromJSON(json: any): PersonalTopScore {
+  return PersonalTopScoreFromJSONTyped(json, false);
+}
+
+export function PersonalTopScoreFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean,
+): PersonalTopScore {
+  if (json == null) {
+    return json;
+  }
+  return {
+    dailyDate: json["dailyDate"],
+    score: json["score"],
+    initials: json["initials"],
+  };
+}
+
+export function PersonalTopScoreToJSON(json: any): PersonalTopScore {
+  return PersonalTopScoreToJSONTyped(json, false);
+}
+
+export function PersonalTopScoreToJSONTyped(
+  value?: PersonalTopScore | null,
+  ignoreDiscriminator: boolean = false,
+): any {
+  if (value == null) {
+    return value;
+  }
+
+  return {
+    dailyDate: value["dailyDate"],
+    score: value["score"],
+    initials: value["initials"],
+  };
+}
