# src/api/models/PersonalTopScoresResponse.ts
@@ -1,0 +1,64 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * tgs_v2
+ * Timeguessr Social API V2
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from "../runtime";
+import type { PersonalTopScore } from "./PersonalTopScore";
+import {
+  PersonalTopScoreFromJSON,
+  PersonalTopScoreFromJSONTyped,
+  PersonalTopScoreToJSON,
+  PersonalTopScoreToJSONTyped,
+} from "./PersonalTopScore";
+
+/**
+ *
+ * @export
+ * @interface PersonalTopScoresResponse
+ */
+export interface PersonalTopScoresResponse extends Array<PersonalTopScore> {}
+
+/**
+ * Check if a given object implements the PersonalTopScoresResponse interface.
+ */
+export function instanceOfPersonalTopScoresResponse(
+  value: object,
+): value is PersonalTopScoresResponse {
+  return true;
+}
+
+export function PersonalTopScoresResponseFromJSON(
+  json: any,
+): PersonalTopScoresResponse {
+  return PersonalTopScoresResponseFromJSONTyped(json, false);
+}
+
+export function PersonalTopScoresResponseFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean,
+): PersonalTopScoresResponse {
+  return json;
+}
+
+export function PersonalTopScoresResponseToJSON(
+  json: any,
+): PersonalTopScoresResponse {
+  return PersonalTopScoresResponseToJSONTyped(json, false);
+}
+
+export function PersonalTopScoresResponseToJSONTyped(
+  value?: PersonalTopScoresResponse | null,
+  ignoreDiscriminator: boolean = false,
+): any {
+  return value;
+}
