# src/api/models/index.ts
@@ -1,14 +1,20 @@
 /* tslint:disable */
 /* eslint-disable */
+export * from "./AddCommentRequest";
 export * from "./AddDailyResultRequest";
 export * from "./AddRoundResultRequest";
 export * from "./AiGuessInfo";
 export * from "./AiGuessInfoLocation";
 export * from "./AllTimeLeaderboardEntry";
+export * from "./Comment";
 export * from "./DailyResults";
+export * from "./DeleteCommentRequest";
+export * from "./GetCommentsResponse";
 export * from "./GetLeaderboardResponse";
 export * from "./ImageInfo";
 export * from "./LeaderboardEntry";
+export * from "./PersonalTopScore";
+export * from "./PersonalTopScoresResponse";
 export * from "./PlayerRoundResult";
 export * from "./ResetTestResponse";
 export * from "./RoundResult";
